refactor: getFeed()내의 기능들[레디스 조회, 응답 변환]을 메서드로 분리